Add option to set anaconda parcel repo
Add option to set anaconda parcel repo using template parameter to
allow the anaconda parcels to be hosted locally.

PNDA-2061

--- a/environments_examples/pnda_env_standard.yaml
+++ b/environments_examples/pnda_env_standard.yaml
@@ -60,6 +60,7 @@ parameter_defaults:
   # Optional mirrors
   JavaMirror: 'http://mirror/jdk-8u74-linux-x64.tar.gz'
   ClouderaParcelsMirror: 'http://mirror/archive.cloudera.com/cdh5/parcels/5.5.2/'
+  AnacondaParcelsMirror: 'http://mirror/anaconda/misc/parcels/'
 
   git_private_key_file: deploy
   
