--- a/pnda_standard.yaml
+++ b/pnda_standard.yaml
@@ -139,6 +139,10 @@ parameters:
     description: URL of a mirror for cloudera parcels download
     type: string
     default: ''
+  AnacondaParcelsMirror:
+    description: URL of a mirror for anaconda parcels download
+    type: string
+    default: ''
 
   keystone_user:
     type: string
@@ -313,6 +317,7 @@ resources:
             $git_branch$: { get_param: GitBranch }
             $java_mirror$: { get_param: JavaMirror }
             $cloudera_mirror$: { get_param: ClouderaParcelsMirror }
+            $anaconda_mirror$: { get_param: AnacondaParcelsMirror }
             $keystone_user$: { get_param: keystone_user }
             $keystone_password$: { get_param: keystone_password }
             $keystone_tenant$: { get_param: keystone_tenant }
