--- a/templates/standard/tools.yaml
+++ b/templates/standard/tools.yaml
@@ -50,34 +50,17 @@ resources:
         str_replace:
           template: {get_file: scripts/base_install.sh }
           params:
-            $flavor$: { get_param: pnda_flavor }
-            $formula: 'kafka_manager platform_testing_general elk'
+            $flavor$: { get_param: pnda_flavor }         
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
+            $roles$: 'kafka_manager platform_testing_general elk'
+            $cloudera_role$: ''            
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: minion_deployment
     properties:
       signal_transport: TEMP_URL_SIGNAL
       config:
         get_resource: install_config
-      server:
-        get_resource: server
-  minion_config:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      group: script
-      config:
-        str_replace:
-          template: {get_file: scripts/saltminion_install.sh }
-          params:
-            $master_ip$: { get_param: SaltmasterIP }
-  minion_deployment:
-    type: OS::Heat::SoftwareDeployment
-    properties:
-      signal_transport: TEMP_URL_SIGNAL
-      config:
-        get_resource: minion_config
       server:
         get_resource: server
 
