--- a/templates/standard/bastion.yaml
+++ b/templates/standard/bastion.yaml
@@ -2,7 +2,7 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the saltmaster server
+    description: Flavor of the bastion server
     type: string
     default: m1.small
   KeyName:
@@ -14,39 +14,57 @@ parameters:
   PrivateSubnet:
     description: Private network for pnda deployment
     type: string
+  PublicNet:
+    description: Private network for pnda deployment
+    type: string
   Image:
     type: string
   name:
     type: string
   SaltmasterIP:
     type: string
-  NodeIndex:
-    type: number
-    default: 0
-  sec_group:
+  private_key:
     type: string
   cluster_name:
-    type: string
-  pnda_secgroup:
     type: string
   pnda_flavor:
     type: string
     default: standard
-  logvolume_size:
-    type: number
-    default: 500
-  log_mountpoint:
+  pnda_secgroup:
     type: string
-    default: /dev/vdb
 
 resources:
+  sec_group:
+    type: OS::Neutron::SecurityGroup
+    properties:
+      description: Bastion SecurityGroup
+      name:
+        str_replace:
+          template: cname-bastion
+          params :
+            cname: { get_param: cluster_name }
+      rules:
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: icmp
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 22
+          port_range_max: 22
+
   port:
     type: OS::Neutron::Port
     properties:
       network: { get_param: PrivateNet }
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+      security_groups: [{ get_resource: sec_group },{ get_param: pnda_secgroup }]
+
+  floatingIP:
+    type: OS::Neutron::FloatingIP
+    properties:
+      floating_network_id: { get_param: PublicNet }
+      port_id: { get_resource: port}
+
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -56,14 +74,15 @@ resources:
           template: {get_file: scripts/base_install.sh }
           params:
             $flavor$: { get_param: pnda_flavor }
+            $roles$: 'bastion'
+            $cloudera_role$: ''
             $master_ip$: { get_param: SaltmasterIP }
+            $keyname$: { get_param: 'OS::stack_name' }
+            $private_key$: { get_param: private_key }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'zookeeper'
-            $cloudera_role$: ''            
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ logvolume_attachment ]
+    depends_on: bastion_deployment
     properties:
       signal_transport: TEMP_URL_SIGNAL
       config:
@@ -71,26 +90,31 @@ resources:
       server:
         get_resource: server
 
-  logvolume:
-    type: OS::Cinder::Volume
+  bastion_config:
+    type: OS::Heat::SoftwareConfig
     properties:
-      size: { get_param: logvolume_size }
-      description: Volume for zookeeper logs
-
-  logvolume_attachment:
-    type: OS::Cinder::VolumeAttachment
+      group: script
+      config:
+        str_replace:
+          template: {get_file: scripts/bastion_install.sh }
+          params:
+            $private_key$: { get_param: private_key }
+            $keyname$: { get_param: 'OS::stack_name' }            
+  bastion_deployment:
+    type: OS::Heat::SoftwareDeployment
     properties:
-      volume_id: { get_resource: logvolume }
-      instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
-
-
+      signal_transport: TEMP_URL_SIGNAL
+      config:
+        get_resource: bastion_config
+      server:
+        get_resource: server
   server:
     type: OS::Nova::Server
+    depends_on: floatingIP
     properties:
       name: { get_param: name }
       image: { get_param: Image }
-      flavor: { get_param: Flavor }
+      flavor: { get_param: Flavor}
       key_name: { get_param: KeyName }
       networks:
         - port: { get_resource: port }
@@ -99,21 +123,7 @@ resources:
       config_drive: True
 
 outputs:
-  port_resource:
-    description: Heat resource handle for the Neutron port
-    value:
-      { get_resource: port }
   server_resource:
     description: Heat resource handle for the Nova compute server
     value:
       {get_resource: server}
-  hosts_entry:
-    description: >
-      Server's IP address and hostname in the /etc/hosts format
-    value:
-      str_replace:
-        template: |
-          PRIMARYIP PRIMARYHOST
-        params:
-          PRIMARYIP: {get_attr: [server, first_address]}
-          PRIMARYHOST: {get_attr: [server, name]}
