--- a/templates/standard/cm.yaml
+++ b/templates/standard/cm.yaml
@@ -2,7 +2,7 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the saltmaster server
+    description: Flavor of the cloudera manager server
     type: string
     default: m1.xlarge
   KeyName:
@@ -65,36 +65,21 @@ resources:
       group: script
       config:
         str_replace:
-          template: {get_file: scripts/cm_install.sh }
+          template: {get_file: scripts/base_install.sh }
           params:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
+            $roles$: 'cloudera_manager platform_testing_cdh mysql_connector'
+            $cloudera_role$: 'CM'            
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ minion_deployment, logvolume_attachment ]
+    depends_on: [ logvolume_attachment ]
     properties:
       signal_transport: TEMP_URL_SIGNAL
       config:
         get_resource: install_config
-      server:
-        get_resource: server
-  minion_config:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      group: script
-      config:
-        str_replace:
-          template: {get_file: scripts/saltminion_install.sh }
-          params:
-            $master_ip$: { get_param: SaltmasterIP }
-  minion_deployment:
-    type: OS::Heat::SoftwareDeployment
-    properties:
-      signal_transport: TEMP_URL_SIGNAL
-      config:
-        get_resource: minion_config
       server:
         get_resource: server
 
