--- a/templates/standard/edge.yaml
+++ b/templates/standard/edge.yaml
@@ -65,36 +65,22 @@ resources:
       group: script
       config:
         str_replace:
-          template: {get_file: scripts/edge_install.sh }
+          template: {get_file: scripts/base_install.sh }
           params:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
+            $roles$: 'cloudera_edge console_frontend console_backend_data_logger console_backend_data_manager graphite gobblin deployment_manager package_repository data_service impala-shell yarn-gateway hbase_opentsdb_tables hdfs_cleaner master_dataset'
+            $cloudera_role$: 'EDGE'
+
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ minion_deployment, logvolume_attachment ]
+    depends_on: [ logvolume_attachment ]
     properties:
       signal_transport: TEMP_URL_SIGNAL
       config:
         get_resource: install_config
-      server:
-        get_resource: server
-  minion_config:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      group: script
-      config:
-        str_replace:
-          template: {get_file: scripts/saltminion_install.sh }
-          params:
-            $master_ip$: { get_param: SaltmasterIP }
-  minion_deployment:
-    type: OS::Heat::SoftwareDeployment
-    properties:
-      signal_transport: TEMP_URL_SIGNAL
-      config:
-        get_resource: minion_config
       server:
         get_resource: server
 
