--- a/templates/standard/jupyter.yaml
+++ b/templates/standard/jupyter.yaml
@@ -55,35 +55,19 @@ resources:
       group: script
       config:
         str_replace:
-          template: {get_file: scripts/jupyter_install.sh }
+          template: {get_file: scripts/base_install.sh }
           params:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
+            $roles$: 'jupyter'
+            $cloudera_role$: 'EDGE'            
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: minion_deployment
     properties:
       signal_transport: TEMP_URL_SIGNAL
       config:
         get_resource: install_config
-      server:
-        get_resource: server
-  minion_config:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      group: script
-      config:
-        str_replace:
-          template: {get_file: scripts/saltminion_install.sh }
-          params:
-            $master_ip$: { get_param: SaltmasterIP }
-  minion_deployment:
-    type: OS::Heat::SoftwareDeployment
-    properties:
-      signal_transport: TEMP_URL_SIGNAL
-      config:
-        get_resource: minion_config
       server:
         get_resource: server
 
