--- a/templates/standard/saltmaster.yaml
+++ b/templates/standard/saltmaster.yaml
@@ -53,14 +53,11 @@ resources:
       group: script
       config:
         str_replace:
-          template: {get_file: scripts/base_install.sh }
+          template: {get_file: scripts/saltmaster_install.sh }
           params:
             $flavor$: { get_param: pnda_flavor }
-            $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'zookeeper'
-            $cloudera_role$: ''            
+            $volume_dev$: { get_param: log_mountpoint }         
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ logvolume_attachment ]
