Mount datanode at vdc

--- a/templates/standard/pnda_cluster.yaml
+++ b/templates/standard/pnda_cluster.yaml
@@ -96,7 +96,7 @@ parameters:
     default: 200
     type: number
   DatanodeMountpoint:
-    default: /dev/vdb
+    default: /dev/vdc
     type: string
 
   public_net:
