--- a/templates/pico/edge.yaml
+++ b/templates/pico/edge.yaml
@@ -2,9 +2,9 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the saltmaster server
+    description: Flavor of the edge server
     type: string
-    default: m1.small
+    default: m1.xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
@@ -23,8 +23,6 @@ parameters:
   NodeIndex:
     type: number
     default: 0
-  sec_group:
-    type: string
   cluster_name:
     type: string
   pnda_secgroup:
@@ -34,19 +32,33 @@ parameters:
     default: standard
   logvolume_size:
     type: number
-    default: 500
+    default: 250
   log_mountpoint:
     type: string
     default: /dev/vdb
 
 resources:
-  port:
-    type: OS::Neutron::Port
+  sec_group:
+    type: OS::Neutron::SecurityGroup
     properties:
-      network: { get_param: PrivateNet }
-      fixed_ips:
-        - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+      description: Edge SecurityGroup
+      name:
+        str_replace:
+          template:
+            cname-edge
+          params :
+            cname: { get_param: cluster_name }
+      rules:
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: icmp
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 22
+          port_range_max: 22
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 8888
+          port_range_max: 8888
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -56,8 +68,12 @@ resources:
           template: {get_file: scripts/base_install.sh }
           params:
             $flavor$: { get_param: pnda_flavor }
+            $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }         
+            $volume_dev$: { get_param: log_mountpoint }
+            $roles$: 'cloudera_edge console_frontend console_backend_data_logger console_backend_data_manager graphite gobblin deployment_manager package_repository data_service impala-shell yarn-gateway hbase_opentsdb_tables hdfs_cleaner master_dataset'
+            $cloudera_role$: 'EDGE'
+
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ logvolume_attachment ]
@@ -68,11 +84,18 @@ resources:
       server:
         get_resource: server
 
+  port:
+    type: OS::Neutron::Port
+    properties:
+      network: { get_param: PrivateNet }
+      fixed_ips:
+        - subnet_id: { get_param: PrivateSubnet }
+      security_groups: [{ get_resource: sec_group }, { get_param: pnda_secgroup }]
   logvolume:
     type: OS::Cinder::Volume
     properties:
       size: { get_param: logvolume_size }
-      description: Volume for zookeeper logs
+      description: Volume for edge logs
 
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
@@ -89,8 +112,9 @@ resources:
       image: { get_param: Image }
       flavor: { get_param: Flavor }
       key_name: { get_param: KeyName }
-      networks:
-        - port: { get_resource: port }
+      networks: [{ network: {get_param: PrivateNet}}]
+      security_groups: [{ get_resource: sec_group }, { get_param: pnda_secgroup }]
+
       software_config_transport: POLL_TEMP_URL
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
