--- a/templates/pico/instance_flavors.yaml
+++ b/templates/pico/instance_flavors.yaml
@@ -1,18 +1,8 @@
-  # FLAVORS
-  Manager1Flavor: p.medium
-  Manager2Flavor: p.xlarge
-  Manager3Flavor: p.xlarge
-  Manager4Flavor: p.xlarge
-  LogserverFlavor: p.nano
-  EdgeFlavor: p.pico
-  JupyterFlavor: p.large
-  OpentsdbFlavor: p.tiny
-  ToolsFlavor: p.micro
-  ZookeeperFlavor: p.micro
-  KafkaFlavor: p.small
-  DatanodeFlavor: p.xlarge
-  PkgserverFlavor: p.pico
-  BastionFlavor: m1.small
-  SaltmasterFlavor: m1.small
-  DatanodeVolumeSize: 1024
-  PndaFlavor: standard
+parameter_defaults:
+  Manager1Flavor: pnda-micro
+  EdgeFlavor: pnda-micro
+  KafkaFlavor: pnda-micro
+  DatanodeFlavor: pnda-micro
+  BastionFlavor: pnda-micro
+  DatanodeVolumeSize: 10
+  PndaFlavor: pico
