--- a/templates/pico/kafka.yaml
+++ b/templates/pico/kafka.yaml
@@ -2,9 +2,9 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the saltmaster server
+    description: Flavor of the kafka server
     type: string
-    default: m1.xlarge
+    default: m1.small
   KeyName:
     description: Name of an existing ssh keypair
     type: string
@@ -25,26 +25,19 @@ parameters:
     default: 0
   sec_group:
     type: string
-  volume_size:
-    type: number
-    default: 200
-  mountpoint:
-    type: string
-    default: /dev/vdc
   cluster_name:
     type: string
   pnda_secgroup:
     type: string
   pnda_flavor:
     type: string
-    default: default
+    default: standard
   logvolume_size:
     type: number
     default: 250
   log_mountpoint:
     type: string
     default: /dev/vdb
-
 
 resources:
   port:
@@ -53,7 +46,7 @@ resources:
       network: { get_param: PrivateNet }
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_param: sec_group }]
+      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -64,19 +57,34 @@ resources:
           params:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
+            $brokerid$: { get_param: NodeIndex}
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'cloudera_manager platform_testing_cdh mysql_connector'
-            $cloudera_role$: 'CM'                
+            $roles$: 'kafka'
+            $cloudera_role$: ''               
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ volume_attachment, logvolume_attachment ]
+    depends_on: [ logvolume_attachment ]
     properties:
       signal_transport: TEMP_URL_SIGNAL
       config:
         get_resource: install_config
       server:
         get_resource: server
+
+  logvolume:
+    type: OS::Cinder::Volume
+    properties:
+      size: { get_param: logvolume_size }
+      description: Volume for kafka logs
+
+  logvolume_attachment:
+    type: OS::Cinder::VolumeAttachment
+    properties:
+      volume_id: { get_resource: logvolume }
+      instance_uuid: { get_resource: server }
+      mountpoint: { get_param: log_mountpoint }
+
 
   server:
     type: OS::Nova::Server
@@ -85,35 +93,11 @@ resources:
       image: { get_param: Image }
       flavor: { get_param: Flavor }
       key_name: { get_param: KeyName }
-      networks: [{ network: {get_param: PrivateNet}}]
-      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+      networks:
+        - port: { get_resource: port }
       software_config_transport: POLL_TEMP_URL
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
-
-  volume:
-    type: OS::Cinder::Volume
-    properties:
-      size: { get_param: volume_size }
-      description: Volume for datanode
-  volume_attachment:
-    type: OS::Cinder::VolumeAttachment
-    properties:
-      volume_id: { get_resource: volume }
-      instance_uuid: { get_resource: server }
-      mountpoint: { get_param: mountpoint }
-  logvolume:
-    type: OS::Cinder::Volume
-    properties:
-      size: { get_param: logvolume_size }
-      description: Volume for datanode logs
-  logvolume_attachment:
-    type: OS::Cinder::VolumeAttachment
-    depends_on: volume_attachment
-    properties:
-      volume_id: { get_resource: logvolume }
-      instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 
 
 outputs:
