--- a/templates/standard/dn.yaml
+++ b/templates/standard/dn.yaml
@@ -2,7 +2,7 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the manager4 server
+    description: Flavor of the datanode server
     type: string
     default: m1.xlarge
   KeyName:
@@ -20,13 +20,24 @@ parameters:
     type: string
   SaltmasterIP:
     type: string
+  NodeIndex:
+    type: number
+    default: 0
+  sec_group:
+    type: string
+  volume_size:
+    type: number
+    default: 200
+  mountpoint:
+    type: string
+    default: /dev/vdc
   cluster_name:
     type: string
   pnda_secgroup:
     type: string
   pnda_flavor:
     type: string
-    default: standard 
+    default: default
   logvolume_size:
     type: number
     default: 250
@@ -34,28 +45,15 @@ parameters:
     type: string
     default: /dev/vdb
 
-resources:
-  sec_group:
-    type: OS::Neutron::SecurityGroup
-    properties:
-      description: CM SecurityGroup
-      name:
-        str_replace:
-          template:
-            cname-cdh-mgr4
-          params:
-            cname: { get_param: cluster_name }
-      rules:
-        - remote_ip_prefix: 0.0.0.0/0
-          protocol: icmp
 
+resources:
   port:
     type: OS::Neutron::Port
     properties:
       network: { get_param: PrivateNet }
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_resource: sec_group }, { get_param: pnda_secgroup }]
+      security_groups: [{ get_param: sec_group }]
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -68,11 +66,11 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'oozie_database mysql_connector hue'
-            $cloudera_role$: 'MGR04'
+            $roles$: 'cloudera_manager platform_testing_cdh mysql_connector'
+            $cloudera_role$: 'DATANODE'                
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ logvolume_attachment ]
+    depends_on: [ volume_attachment, logvolume_attachment ]
     properties:
       signal_transport: TEMP_URL_SIGNAL
       config:
@@ -80,36 +78,60 @@ resources:
       server:
         get_resource: server
 
+  server:
+    type: OS::Nova::Server
+    properties:
+      name: { get_param: name }
+      image: { get_param: Image }
+      flavor: { get_param: Flavor }
+      key_name: { get_param: KeyName }
+      networks: [{ network: {get_param: PrivateNet}}]
+      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+      software_config_transport: POLL_TEMP_URL
+      user_data_format: SOFTWARE_CONFIG
+      config_drive: True
+
+  volume:
+    type: OS::Cinder::Volume
+    properties:
+      size: { get_param: volume_size }
+      description: Volume for datanode
+  volume_attachment:
+    type: OS::Cinder::VolumeAttachment
+    properties:
+      volume_id: { get_resource: volume }
+      instance_uuid: { get_resource: server }
+      mountpoint: { get_param: mountpoint }
   logvolume:
     type: OS::Cinder::Volume
     properties:
       size: { get_param: logvolume_size }
-      description: Volume for manager4 logs
-
+      description: Volume for datanode logs
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
+    depends_on: volume_attachment
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
       mountpoint: { get_param: log_mountpoint }
 
 
-  server:
-    type: OS::Nova::Server
-    properties:
-      name: { get_param: name }
-      image: { get_param: Image }
-      flavor: { get_param: Flavor}
-      key_name: { get_param: KeyName }
-      networks:
-        - port: { get_resource: port }
-      software_config_transport: POLL_TEMP_URL
-      user_data_format: SOFTWARE_CONFIG
-      config_drive: True
-
-
 outputs:
+  port_resource:
+    description: Heat resource handle for the Neutron port
+    value:
+      { get_resource: port }
   server_resource:
     description: Heat resource handle for the Nova compute server
     value:
       {get_resource: server}
+  hosts_entry:
+    description: >
+      Server's IP address and hostname in the /etc/hosts format
+    value:
+      str_replace:
+        template: |
+          PRIMARYIP PRIMARYHOST
+        params:
+          PRIMARYIP: {get_attr: [server, first_address]}
+          PRIMARYHOST: {get_attr: [server, name]}
