--- a/templates/standard/mgr2.yaml
+++ b/templates/standard/mgr2.yaml
@@ -2,7 +2,7 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the saltmaster server
+    description: Flavor of the manager2 server
     type: string
     default: m1.xlarge
   KeyName:
