--- a/templates/standard/pnda_cluster.yaml
+++ b/templates/standard/pnda_cluster.yaml
@@ -65,7 +65,7 @@ parameters:
   image_id:
     type: string
     description: default image for pnda servers
-    default: PndaDEV-trusty-cloud-user-x86_64
+    default: ubuntu1404
 
   ToolsNodes:
     default: '1'
