--- a/templates/pico/kafka.yaml
+++ b/templates/pico/kafka.yaml
@@ -60,7 +60,7 @@ resources:
             $brokerid$: { get_param: NodeIndex}
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'kafka'
+            $roles$: 'kafka kafka_manager platform_testing_general elk zookeeper'
             $cloudera_role$: ''               
   install_deployment:
     type: OS::Heat::SoftwareDeployment
