--- a/templates/pico/pnda.yaml
+++ b/templates/pico/pnda.yaml
@@ -3,31 +3,43 @@ parameters:
   SaltmasterFlavor:
     type: string
     description: Flavor for the salmaster nodes
-    default: m1.mico
+    default: pnda-micro
   Manager1Flavor:
     type: string
     description: Flavor for the manager nodes
-    default: m1.mico
+    default: pnda-micro
   EdgeFlavor:
     type: string
     description: Flavor for the edge node
-    default: m1.mico
+    default: pnda-micro
   BastionFlavor:
     type: string
     description: Flavor for the bastion nodes
-    default: m1.mico
+    default: pnda-micro
   KafkaFlavor:
     type: string
     description: Flavor for the kafka nodes
-    default: m1.mico
+    default: pnda-micro
   DatanodeFlavor:
     type: string
     description: Flavor for the data nodes
-    default: m1.mico
-  DataNodes:
+    default: pnda-micro
+  ZookeeperNodes:
     default: '1'
+    description: Number of ZOOKEEPER nodes
+    type: string
+  KafkaNodes:
+    default: '1'
+    description: Number of KAFKA nodes
+    type: string
+  DataNodes:
+    default: '4'
     description: Number of DATA nodes
     type: string
+  OpentsdbNodes:
+    default: 2
+    description: Number of Opentsdb nodes
+    type: number
   DatanodeVolumeSize:
     default: 10
     type: number
@@ -46,7 +58,7 @@ resources:
       git_private_key_file: { get_param: git_private_key_file }
       public_net: { get_param: public_net }
       KeyName: { get_resource: Key }
-      SaltmasterIP: { get_attr: ['edge_server','first_address']}
+      SaltmasterIP: { get_attr: ['saltmaster_server','first_address']}
       PndaSecGroup: { get_resource: PndaSecGroup }
       private_key: { get_attr: ['Key','private_key'] }
       BastionKeyName: { get_param: KeyName }
