--- a/templates/standard/dn.yaml
+++ b/templates/standard/dn.yaml
@@ -66,7 +66,7 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'cloudera_manager platform_testing_cdh mysql_connector'
+            $roles$: 'cloudera_datanode'
             $cloudera_role$: 'DATANODE'                
   install_deployment:
     type: OS::Heat::SoftwareDeployment
