--- a/templates/pico/bastion.yaml
+++ b/templates/pico/bastion.yaml
@@ -80,6 +80,7 @@ resources:
             $keyname$: { get_param: 'OS::stack_name' }
             $private_key$: { get_param: private_key }
             $pnda_cluster$: { get_param: cluster_name }
+            $brokerid$: ''            
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: bastion_deployment
