--- a/templates/pico/dn.yaml
+++ b/templates/pico/dn.yaml
@@ -67,7 +67,8 @@ resources:
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
             $roles$: 'cloudera_datanode'
-            $cloudera_role$: 'DATANODE'                
+            $cloudera_role$: 'DATANODE'
+            $brokerid$: ''
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ volume_attachment, logvolume_attachment ]
