--- a/templates/pico/mgr1.yaml
+++ b/templates/pico/mgr1.yaml
@@ -70,6 +70,8 @@ resources:
             $volume_dev$: { get_param: log_mountpoint }
             $roles$: 'cloudera_namenode mysql_connector oozie_database hue opentsdb grafana'
             $cloudera_role$: 'MGR01'
+            $brokerid$: ''
+            
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: [ logvolume_attachment ]
