--- a/pnda_standard.yaml
+++ b/pnda_standard.yaml
@@ -318,6 +318,7 @@ resources:
             $java_mirror$: { get_param: JavaMirror }
             $cloudera_mirror$: { get_param: ClouderaParcelsMirror }
             $anaconda_mirror$: { get_param: AnacondaParcelsMirror }
+            $ntp_servers$: { get_param: NtpServers }
             $keystone_user$: { get_param: keystone_user }
             $keystone_password$: { get_param: keystone_password }
             $keystone_tenant$: { get_param: keystone_tenant }
