--- a/pnda_env_example.yaml
+++ b/pnda_env_example.yaml
@@ -38,5 +38,5 @@ parameter_defaults:
 
   git_private_key_file: deploy
 
-  # Optionnal ntp servers
+  # Optional ntp servers
   NtpServers: 'xxx.ntp.org'
