add package repository parameters

--- a/pnda_env_example.yaml
+++ b/pnda_env_example.yaml
@@ -40,3 +40,7 @@ parameter_defaults:
 
   # Optional ntp servers
   NtpServers: 'xxx.ntp.org'
+
+  # package repository
+  package_repository_fs_type: 'swift'
+  package_repository_fs_location_path: '/opt/packages'
