--- a/templates/pnda.yaml
+++ b/templates/pnda.yaml
@@ -64,7 +64,35 @@ parameters:
     description: Package repository FS location path
     type: string
     default: ''
-    
+  package_repository_sshfs_user:
+    description: Package repository SSH FS user
+    type: string
+    default: ''
+  package_repository_sshfs_host:
+    description: Package repository SSH FS host
+    type: string
+    default: ''
+  package_repository_sshfs_path:
+    description: Package repository SSH FS path
+    type: string
+    default: ''
+  package_repository_sshfs_key:
+    description: Package repository SSH FS key
+    type: string
+    default: ''
+  S3_ACCESS_KEY_ID:
+    description: AWS S3 access key id
+    type: string
+    default: ''
+  S3_SECRET_ACCESS_KEY:
+    description: AWS S3 secret access key id
+    type: string
+    default: ''
+  AWS_REGION:
+    description: AWS region
+    type: string
+    default: ''
+
   keystone_user:
     type: string
   keystone_password:
@@ -207,6 +235,14 @@ resources:
             $ntp_servers$: { get_param: NtpServers }
             $package_repository_fs_type$ : { get_param: package_repository_fs_type }
             $package_repository_fs_location_path$: { get_param: package_repository_fs_location_path }
+            $package_repository_sshfs_user$: { get_param: package_repository_sshfs_user }
+            $package_repository_sshfs_host$: { get_param: package_repository_sshfs_host }
+            $package_repository_sshfs_path$: { get_param: package_repository_sshfs_path }
+            $package_repository_sshfs_key$: { get_param: package_repository_sshfs_key }
+            $package_repository_sshfs_key_file$: { get_file: pr_key }
+            $S3_ACCESS_KEY_ID$: { get_param: S3_ACCESS_KEY_ID }
+            $S3_SECRET_ACCESS_KEY$: { get_param: S3_SECRET_ACCESS_KEY }
+            $AWS_REGION$: { get_param: AWS_REGION }
             $keystone_user$: { get_param: keystone_user }
             $keystone_password$: { get_param: keystone_password }
             $keystone_tenant$: { get_param: keystone_tenant }
